// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";
package io.harness.eventsframework.schemas.entity;

option java_multiple_files = true;
option go_package = "970_ng_commons";

enum EntityTypeProtoEnum {
  PROJECTS = 0;
  PIPELINES = 1;
  CONNECTORS = 2;
  SECRETS = 3;
  SERVICE = 4;
  ENVIRONMENT = 5;
  INPUT_SETS = 6;
  CV_CONFIG = 7;
  DELEGATES = 8;
  DELEGATE_CONFIGURATIONS = 9;
  CV_VERIFICATION_JOB = 10;
  CV_KUBERNETES_ACTIVITY_SOURCE = 11;
  INTEGRATION_STEPS = 12;
  INTEGRATION_STAGE = 13;
  DEPLOYMENT_STAGE = 14;
  DEPLOYMENT_STEPS = 15;
  PIPELINE_STEPS = 16;
  APPROVAL_STAGE = 17;
  TRIGGERS = 18;
  FEATURE_FLAG_STAGE = 19;
  MONITORED_SERVICE = 20;
  TEMPLATE = 21;
  GIT_REPOSITORIES = 22;
  FEATURE_FLAGS = 23;
  HTTP_STEP = 24;
  SHELL_SCRIPT_STEP = 25;
  K8S_CANARY_DEPLOY_STEP = 26;
  JIRA_CREATE_STEP = 27;
  SERVICENOW_APPROVAL_STEP = 28;
  JIRA_UPDATE_STEP = 29;
  JIRA_APPROVAL_STEP = 30;
  HARNESS_APPROVAL_STEP = 31;
  BARRIER_STEP = 32;
  VERIFY_STEP = 33;
  OPAPOLICIES = 34;
}
